{
    "name": "InputControls",
    "maps": [
        {
            "name": "PlayerControlMovement",
            "id": "fb5bfded-fa85-4bd0-9a4d-d9f432618ec6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c38f5902-4221-4bcc-b08c-c07d9f05ebd9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b21adb03-0cbc-4e47-9176-9332aca41d8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AbrirCatalogo",
                    "type": "Button",
                    "id": "caccaaf5-cea1-4dd2-90ac-5918a36bd720",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "ComputeWASD",
                    "id": "421965c6-a199-43a3-851c-6ee01e9544d3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "down",
                    "id": "77403b7d-bf4a-43af-82ba-b1aa3e8aa95d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "39f25227-8e09-461e-a0a4-ef0375f70b10",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8a7fa6c2-904d-4da6-b190-d4bbe4d522db",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "24026ca3-ae00-4590-944c-faa5f3be00a0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "279d2d94-7dc1-48b2-b484-64f3f513efbd",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AbrirCatalogo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SubmarinoControl",
            "id": "2529ce52-d42b-42a9-843c-406544ba4360",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "40683fcc-5d78-4dff-ba42-a6bf9d61ffdb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "ComputeWASD",
                    "id": "cffcc6d3-7bb6-4330-b26d-517e7cbaeb3e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "769efc7a-7f89-48f2-bde5-81fd482b018b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1f833986-d000-45c4-a430-2ca4b7e55a09",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f1f05232-fa88-4a88-aefc-3cc8bc52fd3d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d9d8490a-4070-42b2-83e1-a51ccb68c5aa",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "EnterSubmarino",
            "id": "9aff051f-6d4e-4f95-84ec-100c91fb436f",
            "actions": [
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "c0615115-d2c5-4efe-bb2f-75db8016eeaf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "SlowTap(duration=1.01)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40959290-3956-4ddd-8763-8bc374e512a0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}